# Finance

./: .env.example  .gitignore  README.md  check_frontend.py  check_status.py  docker-compose.yml  remote_deploy.py
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_paper_sessions.py  0003_factor_and_model.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: ask_stock.py  backtests.py  data_sync.py  factors.py  llm_oauth.py  market.py  models.py  paper_trading.py  reports.py  strategies.py
backend/app/core/: __init__.py  config.py
backend/app/db/: base.py
backend/app/models/: __init__.py  _mixins.py  ask.py  factor.py  paper_trading.py  report.py  snapshot.py  stock.py  strategy.py  task_run.py
backend/app/schemas/: __init__.py  ask_stock.py  backtest.py  dataset.py  factor.py  market.py  paper_trading.py  report.py  snapshot.py  strategy.py  tune.py
backend/app/services/_cython/: __init__.py  rolling.pyx  rolling_py.py
backend/app/services/ask_stock/: __init__.py  agent.py  tools.py
backend/app/services/backtest/: __init__.py  (+9 more)
backend/app/worker/: celery_app.py  tasks.py
backend/tests/: test_closed_loop.py  test_config.py  test_models.py
backend/tests/api/: test_ask_stock_api.py  test_backtest_api.py  test_strategy_api.py
backend/tests/services/: test_ask_stock_agent.py  test_backtest_service.py  test_market_data_service.py  test_oauth.py  test_paper_trading.py  test_report_service.py  test_strategy_engine.py  test_strategy_screening.py
(+104 files in other folders)
